data cleaning, tables, nav bar
1. cleaned data so only saved boxes with data in compiled.js (nothing blank or with 0
2. made index.ejs tables reflect this so only display attributes of that state that we have data on. no blanks
3. made the html more specific to data with dynamic title/description
4. created a nav bar so could go to previous and next state (alphebetically through hrefs)
--- to do this i added an attribute to each object through fs.js with a "number" so that they can go in order fro 1 --> 40
5. cute footer!!

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>MICRO TESTER</title>
+  <title><%= data.state %></title>
   <meta name="author" content="Maia and Ryan">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -19,17 +19,26 @@
     <table>
       <tr>
         <% for(let i in data){ %>
+          <%if(i !== "number"){%>
           <td><%= i %></td>
-          <%}%>
+          <%}}%>
       </tr>
       <tr>
         <% for(let i in data){ %>
+          <%if(i !== "number"){%>
           <td><%= data[i] %></td>
-          <%}%>
+          <%}}%>
       </tr>
     </table>
   </section>
-
+  <% let prev = "micro"+(data["number"]-1)+".html" %>
+  <% let next = "micro"+(data["number"]+1)+".html" %>
+  <% if(data["number"]>1){ %>
+  <a href=<%=prev%>>previous page</a>
+  <%}%>
+  <% if(data["number"]<40){ %>
+  <a href=<%=next%>>next page</a>
+  <%}%>
   <%- include ('global/footer');  %>
 
 </body>
