--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,10 @@
 
 <body>
   <header>
+    <a href="../about.html">about page</a>
+
     <h1><%= data.state %> DATA</h1>
     <h2>This is the microdata for <%= data.state %> </h2>
-
   </header>
   <section id="data info">
     <table>
