updates with everything we need for MS 4

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title><%= data.state %></title>
+  <link rel="stylesheet" href="../style.css">
+
   <meta name="author" content="Maia and Ryan">
   <meta content="text/html" http-equiv="Content-type" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -12,10 +14,14 @@
 <body>
   <header>
     <a href="../about.html">about page</a>
+    <a href="macro.html">macro data</a>
+
 
     <h1><%= data.state %> DATA</h1>
     <h2>This is the microdata for <%= data.state %> </h2>
   </header>
+  <p> insert map and pi chart </p>
+
   <section id="data info">
     <table>
       <tr>
