--- a/views/main_index.ejs
+++ b/views/main_index.ejs
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <a href="../about.html">about page</a>
+    <a href="about.html">about page</a>
 
     <h1>MACRO DATA</h1>
     <h2>This is our macro data </h2>
