--- a/views/main_index.ejs
+++ b/views/main_index.ejs
@@ -2,106 +2,23 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title> MACRO DATA </title>
-  <link rel="stylesheet" href="../style.css">
+    <title>JQVMap - World Map</title>
+    <link href="../dist/jqvmap.css">
 
-  <meta name="author" content="Maia and Ryan">
-  <meta content="text/html" http-equiv="Content-type" />
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="https://d3js.org/topojson.v2.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
-</head>
-
-<body>
-  <header>
-    <a href="about.html">about page</a>
-
-    <h1>MACRO DATA</h1>
-    <h2>This is our macro data </h2>
-  </header>
-
-<style>
-
-path {
-       stroke: white;
-       stroke-width: .5px;
-       fill: black;
-   }
-
-   .state {
-     fill: ;
-     cursor: pointer;
-   }
-
-</style>
-<div class="home"></div>
-
-<script>
-
-const width = 900;
-const height = 600;
-const svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
-
-const projection = d3.geoAlbersUsa()
-    .translate([width / 2, height / 2]) // translate to center of screen
-    .scale([1000]); // scale things down so see entire US
-
-const path = d3.geoPath().projection(projection);
-
-d3.json("https://gist.githubusercontent.com/Bradleykingz/3aa5206b6819a3c38b5d73cb814ed470/raw/a476b9098ba0244718b496697c5b350460d32f99/us-states.json", function(error, uState) {
-if (error) throw error;
-svg.selectAll('path')
-   .data(uState.features)
-   .enter()
-   .append('path')
-   .attr("d", path)
-   .attr('class', 'state')
-});
-
-_(uState.features)
-    .keyBy('properties.name')
-    .merge(_.keyBy(response.data, 'State'))
-    .values()
-    .value();
-
-let max = d3.max(response.data, function (d, i) {
-    return d.unemploymentRate;
-});
-let min = d3.min(response.data, function (d, i) {
-    return d.unemploymentRate;
-});
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="dist/jquery.vmap.js"></script>
+    <script type="text/javascript" src="dist/maps/jquery.vmap.usa.js" charset="utf-8"></script>
 
 
-const colorScale = d3.scaleLinear()
-    .domain([min, max])
-     //I goofed, so this has to be in reverse order
-    .range(["#00806D", "#00BC4C", "#00F200", "#85FB44"].reverse());
+  </head>
+  <body>
+    <div id="vmap" style="width: 600px; height: 400px;"></div>
 
-    let numbers= [2,3,9,12,20,15,25,4,31,6,7,12,18]
-    console.log(d3.min(numbers));
-    //2
-    console.log(d3.max(numbers))
 
-    svg.selectAll('path')
-        .data(uState.features)
-        .enter()
-        .append('path')
-        .attr("d", path)
-        .attr('class', 'state')
-        .style('fill', function (d, i) {
-            let uRate = d.unemploymentRate;
-            return uRate ? colorScale(uRate) : "#ccc";
-        })
-
-</script>
 
   <section id="data info">
-    <table>
+
+    <table id="myTable">
       <tr>
         <th>State</th>
         <th>Percent</th>
@@ -123,7 +40,48 @@ const colorScale = d3.scaleLinear()
 
 
 
+    <script>
+    jQuery(document).ready(function() {
+      jQuery('#vmap').vectorMap({
+        backgroundColor: 'gray',
+        selectedColor: null,
+        hoverColor: 'gray',
+        color: '#ffffff',
+        map: 'usa_en',
+        colors: {
+          al: '#' + document.getElementById("myTable").rows[1].cells[1].innerHTML.substring(5,11),
+          ak: '#' + document.getElementById("myTable").rows[2].cells[1].innerHTML.substring(5,11),
+          az: '#' + document.getElementById("myTable").rows[3].cells[1].innerHTML.substring(5,11),
+ 	        ar: '#' + document.getElementById("myTable").rows[4].cells[1].innerHTML.substring(5,11),
+ 	        ca: '#' + document.getElementById("myTable").rows[5].cells[1].innerHTML.substring(5,11),
+ 	        co: '#' + document.getElementById("myTable").rows[6].cells[1].innerHTML.substring(5,11),
+ 	        ct: '#' + document.getElementById("myTable").rows[7].cells[1].innerHTML.substring(5,11),
+ 	        de: '#' + document.getElementById("myTable").rows[8].cells[1].innerHTML.substring(5,11),
+ 	        dc: '#' + document.getElementById("myTable").rows[9].cells[1].innerHTML.substring(5,11),
+ 	        fl: '#' + document.getElementById("myTable").rows[10].cells[1].innerHTML.substring(5,11),
+          ga: '#' + document.getElementById("myTable").rows[11].cells[1].innerHTML.substring(5,11),
+ 	        hi: '#' + document.getElementById("myTable").rows[12].cells[1].innerHTML.substring(5,11),
+ 	        id: '#' + document.getElementById("myTable").rows[13].cells[1].innerHTML.substring(5,11),
+ 	        il: '#' + document.getElementById("myTable").rows[14].cells[1].innerHTML.substring(5,11),
+ 	        in: '#' + document.getElementById("myTable").rows[15].cells[1].innerHTML.substring(5,11),
+ 	        ia: '#' + document.getElementById("myTable").rows[16].cells[1].innerHTML.substring(5,11),
+ 	        ks: '#' + document.getElementById("myTable").rows[17].cells[1].innerHTML.substring(5,11),
+ 	        ky: '#' + document.getElementById("myTable").rows[18].cells[1].innerHTML.substring(5,11),
+ 	        la: '#' + document.getElementById("myTable").rows[19].cells[1].innerHTML.substring(5,11),
+ 	        me: '#' + document.getElementById("myTable").rows[20].cells[1].innerHTML.substring(5,11),
+ 	        md: '#' + document.getElementById("myTable").rows[21].cells[1].innerHTML.substring(5,11),
+ 	        ma: '#' + document.getElementById("myTable").rows[22].cells[1].innerHTML.substring(5,11)
 
+
+
+        }
+      });
+
+    });
+
+
+
+    </script>
 
 </body>
 
