--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,38 +7,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Ryan and Maia's Website</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Micropages
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <% for(let i=1; i<data.length; i++){ %>
-              <% let num = "micro"+(data[i]["number"])+".html" %>
-              <li><a class="dropdown-item" href=<%=num%> ><%= data[i].state %></a></li>
-              <%}%>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
-
-
+  <%- include ('global/header');  %>
 
   <h1> About Page</h1>
   <h3> Useful Definitions </h3>
@@ -166,6 +136,8 @@
         </li>
       </ol>
     </p>
+    <%- include ('global/footer');  %>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
