--- a/views/micro.ejs
+++ b/views/micro.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title><%= data.state %></title>
+  <title> microdata</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Maia and Ryan">
@@ -24,57 +24,32 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Ryan and Maia's Website</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Micropages
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <% for(let i=1; i<data.length; i++){ %>
-              <% let num = "micro"+(data[i]["number"])+".html" %>
-              <li><a class="dropdown-item" href=<%=num%> ><%= data[i].state %></a></li>
-              <%}%>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+  <%- include ('global/header');  %>
 
+  <% let myPage = data["page"] %>
 
   <header>
 
 
-    <h1><%= data.state %> DATA</h1>
-    <h2>This is the microdata for <%= data.state %> </h2>
+    <h1><%= data[myPage].state %> DATA</h1>
+    <h2>This is the microdata for <%= data[myPage].state %> </h2>
   </header>
   <p> insert map and pi chart </p>
+
+
 
   <section id="data info">
     <table id="myTable">
       <tr>
-        <% for(let i in data){ %>
+        <% for(let i in data[myPage]){ %>
           <%if(i !== "number"){%>
           <td><%= i %></td>
           <%}}%>
       </tr>
       <tr>
-        <% for(let i in data){ %>
+        <% for(let i in data[myPage]){ %>
           <%if(i !== "number"){%>
-          <td><%= data[i] %></td>
+          <td><%= data[myPage][i] %></td>
           <%}}%>
       </tr>
     </table>
@@ -100,15 +75,23 @@ Plotly.newPlot('myDiv', pie, layout);
     </script>
   </div>
   </section>
-  <% let prev = "micro"+(data["number"]-1)+".html" %>
-  <% let next = "micro"+(data["number"]+1)+".html" %>
-  <% if(data["number"]>1){ %>
+
+
+  <% let prev = "micro"+(data[myPage].number-1)+".html" %>
+  <% let next = "micro"+(data[myPage].number+1)+".html" %>
+  <% console.log(prev) %>
+
+
+  <% if(data[myPage].number>1){ %>
   <a href=<%=prev%>>previous page</a>
   <%}%>
-  <% if(data["number"]<40){ %>
+  <% if(data[myPage].number<40){ %>
   <a href=<%=next%>>next page</a>
   <%}%>
+  
   <%- include ('global/footer');  %>
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
