--- a/views/micro.ejs
+++ b/views/micro.ejs
@@ -59,7 +59,8 @@
 for(var i=2;i<10;i++){
     var pie = [{
       values: [document.getElementById("myTable").rows[1].cells[4].innerHTML, document.getElementById("myTable").rows[1].cells[5].innerHTML, document.getElementById("myTable").rows[1].cells[6].innerHTML, document.getElementById("myTable").rows[1].cells[7].innerHTML,
-      document.getElementById("myTable").rows[1].cells[8].innerHTML],
+      document.getElementById("myTable").rows[1].cells[8].innerHTML, document.getElementById("myTable").rows[1].cells[9].innerHTML, document.getElementById("myTable").rows[1].cells[10].innerHTML, document.getElementById("myTable").rows[1].cells[11].innerHTML,
+      document.getElementById("myTable").rows[1].cells[12].innerHTML, document.getElementById("myTable").rows[1].cells[13].innerHTML, document.getElementById("myTable").rows[1].cells[14].innerHTML],
       labels: ['Firearm','Cut/Pierce','Struck by/against','Poisoning','Hanging/Suffocation','Fall','Drowning','Fire/Burn','Motor vehicle','Other','Unknown'],
       type: 'pie'
     }];
