--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,10 +13,17 @@
   <h1> About Page</h1>
   <h3> Useful Definitions </h3>
   <p>
-    violent death:
+    death by unnatural causes: an untimely teast brought about by methods other than natural, bodily causes such as sickness or old age
     <br>
-    mechanism of violent death:
+    cause of death by unnatural causes: the tool or action that brought about an unnatural death such as a cut, a firearm, or a fire.
     <br>
+    ratio: the amount of people who die by unnatural causes in a given state divided by the amount of people who live in the state
+    <br>
+    macrodata: the data describing a big territory, here, the united states
+    <br>
+    microdata: the data describing a smaller territory, here, a specific state
+    <br>
+
   </p>
   <br>
 
