--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,52 +30,54 @@
 
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: 'gray',
+    backgroundColor: '#5c5c5c',
     selectedColor: null,
-    hoverColor: 'gray',
-    color: '#ffffff',
+    color: '#a8a8a8',
     map: 'usa_en',
+    borderWidth: 2,
+    borderColor: 'black',
+    hoverOpacity: .5,
     colors: {
-      al: 'hsl(2,100%,' + 2*(document.getElementById("myTable").rows[1].cells[1].innerHTML.substring(5,7)-10) + '%' +")",
-      ak: 'hsl(2,100%,' + 2*(document.getElementById("myTable").rows[2].cells[1].innerHTML.substring(5,7)-10) + '%' +")",
-      az: 'hsl(2,100%,' + 2*(document.getElementById("myTable").rows[3].cells[1].innerHTML.substring(5,7)-10) + '%' +")",
-      ca: 'hsl(2,100%,' + 2*(document.getElementById("myTable").rows[4].cells[1].innerHTML.substring(5,7)-10) + '%' +")",
-      co: 'hsl(2,100%,' + 2*(document.getElementById("myTable").rows[5].cells[1].innerHTML.substring(5,7)-10) + '%' +")",
-      ct: 'hsl(2,100%,' + 2*(document.getElementById("myTable").rows[6].cells[1].innerHTML.substring(5,7)-10) + '%' +")",
-      de: 'hsl(2,100%,' + 2*(document.getElementById("myTable").rows[7].cells[1].innerHTML.substring(5,7)-10) + '%' +")",
-      dc: 'hsl(2,100%,' + 2*(document.getElementById("myTable").rows[8].cells[1].innerHTML.substring(5,7)-10) + '%' +")",
-      ga: 'hsl(2,100%,' + 2*(document.getElementById("myTable").rows[9].cells[1].innerHTML.substring(5,7)-10) + '%' +")",
-      il: 'hsl(2,100%,' + document.getElementById("myTable").rows[10].cells[1].innerHTML.substring(5,7) + '%' +")",
-      in: 'hsl(2,100%,' + document.getElementById("myTable").rows[11].cells[1].innerHTML.substring(5,7) + '%' +")",
-      ia: 'hsl(2,100%,' + document.getElementById("myTable").rows[12].cells[1].innerHTML.substring(5,7) + '%' +")",
-      ks: 'hsl(2,100%,' + document.getElementById("myTable").rows[13].cells[1].innerHTML.substring(5,7) + '%' +")",
-      ky: 'hsl(2,100%,' + document.getElementById("myTable").rows[14].cells[1].innerHTML.substring(5,7) + '%' +")",
-      la: 'hsl(2,100%,' + document.getElementById("myTable").rows[15].cells[1].innerHTML.substring(5,7) + '%' +")",
-      me: 'hsl(2,100%,' + document.getElementById("myTable").rows[16].cells[1].innerHTML.substring(5,7) + '%' +")",
-      md: 'hsl(2,100%,' + document.getElementById("myTable").rows[17].cells[1].innerHTML.substring(5,7) + '%' +")",
-      ma: 'hsl(2,100%,' + document.getElementById("myTable").rows[18].cells[1].innerHTML.substring(5,7) + '%' +")",
-      mi: 'hsl(2,100%,' + document.getElementById("myTable").rows[19].cells[1].innerHTML.substring(5,7) + '%' +")",
-      mn: 'hsl(2,100%,' + document.getElementById("myTable").rows[20].cells[1].innerHTML.substring(5,7) + '%' +")",
-      mo: 'hsl(2,100%,' + document.getElementById("myTable").rows[21].cells[1].innerHTML.substring(5,7) + '%' +")",
-      ne: 'hsl(2,100%,' + document.getElementById("myTable").rows[22].cells[1].innerHTML.substring(5,7) + '%' +")",
-      nv: 'hsl(2,100%,' + document.getElementById("myTable").rows[23].cells[1].innerHTML.substring(5,7) + '%' +")",
-      nh: 'hsl(2,100%,' + document.getElementById("myTable").rows[24].cells[1].innerHTML.substring(5,7) + '%' +")",
-      nj: 'hsl(2,100%,' + document.getElementById("myTable").rows[25].cells[1].innerHTML.substring(5,7) + '%' +")",
-      nm: 'hsl(2,100%,' + document.getElementById("myTable").rows[26].cells[1].innerHTML.substring(5,7) + '%' +")",
-      ny: 'hsl(2,100%,' + document.getElementById("myTable").rows[27].cells[1].innerHTML.substring(5,7) + '%' +")",
-      nc: 'hsl(2,100%,' + document.getElementById("myTable").rows[28].cells[1].innerHTML.substring(5,7) + '%' +")",
-      oh: 'hsl(2,100%,' + document.getElementById("myTable").rows[29].cells[1].innerHTML.substring(5,7) + '%' +")",
-      ok: 'hsl(2,100%,' + document.getElementById("myTable").rows[30].cells[1].innerHTML.substring(5,7) + '%' +")",
-      or: 'hsl(2,100%,' + document.getElementById("myTable").rows[31].cells[1].innerHTML.substring(5,7) + '%' +")",
-      pa: 'hsl(2,100%,' + document.getElementById("myTable").rows[32].cells[1].innerHTML.substring(5,7) + '%' +")",
-      ri: 'hsl(2,100%,' + document.getElementById("myTable").rows[33].cells[1].innerHTML.substring(5,7) + '%' +")",
-      sc: 'hsl(2,100%,' + document.getElementById("myTable").rows[34].cells[1].innerHTML.substring(5,7) + '%' +")",
-      ut: 'hsl(2,100%,' + document.getElementById("myTable").rows[35].cells[1].innerHTML.substring(5,7) + '%' +")",
-      vt: 'hsl(2,100%,' + document.getElementById("myTable").rows[36].cells[1].innerHTML.substring(5,7) + '%' +")",
-      va: 'hsl(2,100%,' + document.getElementById("myTable").rows[37].cells[1].innerHTML.substring(5,7) + '%' +")",
-      wa: 'hsl(2,100%,' + document.getElementById("myTable").rows[38].cells[1].innerHTML.substring(5,7) + '%' +")",
-      wv: 'hsl(2,100%,' + document.getElementById("myTable").rows[39].cells[1].innerHTML.substring(5,7) + '%' +")",
-      wi: 'hsl(2,100%,' + document.getElementById("myTable").rows[40].cells[1].innerHTML.substring(5,7) + '%' +")"
+      al: 'hsl(2,100%,' + (100 -Math.pow(document.getElementById("myTable").rows[1].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ak: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[2].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      az: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[3].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ca: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[4].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      co: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[5].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ct: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[6].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      de: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[7].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      dc: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[8].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ga: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[9].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      il: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[10].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      in: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[11].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ia: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[12].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ks: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[13].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ky: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[14].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      la: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[15].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      me: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[16].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      md: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[17].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ma: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[18].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      mi: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[19].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      mn: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[20].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      mo: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[21].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ne: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[22].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      nv: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[23].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      nh: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[24].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      nj: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[25].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      nm: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[26].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ny: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[27].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      nc: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[28].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      oh: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[29].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ok: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[30].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      or: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[31].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      pa: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[32].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ri: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[33].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      sc: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[34].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      ut: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[35].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      vt: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[36].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      va: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[37].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      wa: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[38].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      wv: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[39].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
+      wi: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[40].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
 
 
 
