--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,15 +28,49 @@
 
 <script>
 
+let index = [
+  'Alabama',       'Alaska',
+  'Arizona',       'California',
+  'Colorado',      'Connecticut',
+  'Delaware',      'District of Columbia',
+  'Georgia',       'Illinois',
+  'Indiana',       'Iowa',
+  'Kansas',        'Kentucky',
+  'Louisiana',     'Maine',
+  'Maryland',      'Massachusetts',
+  'Michigan',      'Minnesota',
+  'Missouri',      'Nebraska',
+  'Nevada',        'New Hampshire',
+  'New Jersey',    'New Mexico',
+  'New York',      'North Carolina',
+  'Ohio',          'Oklahoma',
+  'Oregon',        'Pennsylvania',
+  'Rhode Island',  'South Carolina',
+  'Utah',          'Vermont',
+  'Virginia',      'Washington',
+  'West Virginia', 'Wisconsin',
+]
+
+
 jQuery(document).ready(function() {
   jQuery('#vmap').vectorMap({
-    backgroundColor: '#5c5c5c',
+    backgroundColor: '#FFFFFF',
     selectedColor: null,
     color: '#a8a8a8',
     map: 'usa_en',
     borderWidth: 2,
     borderColor: 'black',
     hoverOpacity: .5,
+    onRegionClick: function(event, code, region){
+      for (let state of index){
+        if (region == state){
+          let link = "micro"+ (index.indexOf(region)+1)+".html"
+          window.location.href = link
+
+        }
+      }
+
+     },
     colors: {
       al: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[1].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
       ak: 'hsl(2,100%,' + (100 - Math.pow(document.getElementById("myTable").rows[2].cells[1].innerHTML.substring(5,7),2)/25) + '%' +")",
@@ -100,6 +134,7 @@ jQuery(document).ready(function() {
     <tr>
       <% let num = "micro"+(data[i]["number"])+".html" %>
       <td>  <a href=<%=num%>> <%= data[i].state %></a> </td>
+
       <td><%= data[i].ratio %></td>
     </tr>
     <%}%>
