some css + desc

--- a/views/global/micromap.ejs
+++ b/views/global/micromap.ejs
@@ -687,7 +687,7 @@ jQuery(document).ready(function() {
 
 </script>
 </div>
-<div id="myDiv">
+<div id="myDiv" style = "position:relative; left:700px; top:-400px;">
 <script>
 
 for(var i=2;i<10;i++){
@@ -710,3 +710,4 @@ Plotly.newPlot('myDiv', pie, layout);
 
 
 </script>
+</div>
