--- a/views/global/footer.ejs
+++ b/views/global/footer.ejs
@@ -1,4 +1,6 @@
 <footer>
 
-GO RYAN AND MAIA!!! (this is our footer)
+We recieved our data from <a href="https://wisqars.cdc.gov/nvdrs/"> the cdc.gov </a>. With it, we explored deaths by unnatural causes on both a national and state level.
+
+
 </footer>
