--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title> MACRO DATA </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" type = "text/css" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Maia and Ryan">
   <meta content="text/html" http-equiv="Content-type" />
@@ -20,13 +21,21 @@
 
   <header>
 
-    <h1>MACRO DATA</h1>
-    <h2>This is our macro data </h2>
+    <h1>What states have the highest rates of deaths by unnatural causes?</h1>
+    <h3>The diagram below depicts the ratio between deaths by unnatural causes and population for each state</h3>
   </header>
 
-<div id="vmap" style="width: 600px; height: 400px;"></div>
-
+<div id="vmap" style="width: 600px; height: 400px;" >
 <%- include ('global/macromap');  %>
+
+</div>
+
+<img src="pictures/key.png" alt="key" width="auto" height="300" style = "position:relative; left:600px; top:-350px;">
+
+<%- include ('global/footer');  %>
+
+
+
 
 <section id="data info">
 
@@ -49,7 +58,6 @@
     </table>
   </section>
 
-    <%- include ('global/footer');  %>
 
 
 
