--- a/views/micro.ejs
+++ b/views/micro.ejs
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <title> microdata</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" type = "text/css" href="style.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Maia and Ryan">
   <meta content="text/html" http-equiv="Content-type" />
@@ -39,7 +41,6 @@
   <%let max = 0%>
   <%let method%>
 
-
   <% for(let i in data[myPage]){ %>
     <%if (i !== "state"){%>
       <%if (i !== "population"){%>
@@ -51,11 +52,22 @@
     <%console.log(max,method) %>
 
     <%if(method == "firearm"){%>
-      <p> the most common method of death by unnatural causes for <%= data[myPage].state %> is a <%=  method %>, which is also the most common method for all states. </p>
+      <p> The most common method of death by unnatural causes for <%= data[myPage].state %> is a <%=  method %>, which is also the most common method for all states. </p>
     <%}%>
     <%if(method !== "firearm"){%>
-      <p> the most common method of death by unnatural causes for <%= data[myPage].state %> is by <%=  method %> , which is interesting because the most common method for all states is a  firearm. </p>
+      <p> The most common method of death by unnatural causes for <%= data[myPage].state %> is by <%=  method %> , which is interesting because the most common method for all states is a  firearm. </p>
     <%}%>
+
+    <%if(data[myPage].ratio < avg_rates){%>
+      <p> <%= data[myPage].state %> has a lower rate of death by unnatural causes than the national average of 0.0235 % with a deaths: population ratio of  <%=data[myPage].ratio %>: 1 </p>
+      <%}%>
+      <%if(data[myPage].ratio >= avg_rates){%>
+        <p> <%= data[myPage].state %> has a greater rate of death by unnatural causes than the national average of 0.0235 % with a deaths: population ratio of  <%=data[myPage].ratio %>: 1 </p>
+        <%}%>
+
+
+
+
 
   <section id="data info">
     <table id="myTable">
@@ -74,11 +86,15 @@
 
     </table>
     <br>
-  <div id="vmap" style="width: 600px; height: 400px;">
-    <%- include ('global/micromap');  %>
- </div>
+
 
   </section>
+
+  <div id="vmap" style="width: 600px; height: 400px;">
+    <%- include ('global/micromap');  %>
+  </div>
+ <img src="pictures/key.png" alt="key" width="auto" height="300" style = "position:relative; left:600px; top:-750px;">
+
 
 
   <% let prev = "micro"+(data[myPage].number-1)+".html" %>
@@ -89,10 +105,10 @@
   <% if(data[myPage].number>1){ %>
 
 
-    <a class="btn btn-outline-info" href=<%=prev%> role="button">previous page</a>
+    <a class="btn btn-outline-info" style = "position:relative;  top:-500px;" href=<%=prev%> role="button">previous page</a>
   <%}%>
   <% if(data[myPage].number<40){ %>
-    <a class="btn btn-outline-info" href=<%=next%> role="button">next page</a>
+    <a class="btn btn-outline-info" style = "position:relative;  top:-500px;"href=<%=next%> role="button">next page</a>
   <%}%>
 
   <%- include ('global/footer');  %>
