--- a/views/global/footer.ejs
+++ b/views/global/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
 
-We recieved our data from <a href="https://wisqars.cdc.gov/nvdrs/"> the cdc.gov </a>. With it, we explored deaths by unnatural causes on both a national and state level.
+We recieved our data from <a href="https://wisqars.cdc.gov/nvdrs/">  cdc.gov </a> With it, we explored deaths by unnatural causes on both a national and state level.
 
 
 </footer>
